src/test/deca/etapeA/invalid/lex_include/lex_include_3.deca
// Description:
//    test du lexeur pour les inclusions
//
// Resultats:
// erreur syntaxique
// Ligne <8> : <syntaxError>

#include "unSeulGuillemetGauche
